docs/upbound-provider-azure/1.3/orbital/v1beta1/contactProfile.md
---
permalink: /upbound-provider-azure/1.3/orbital/v1beta1/contactProfile/
---

# orbital.v1beta1.contactProfile

"ContactProfile is the Schema for the ContactProfiles API. Manages a orbital contact profile resource."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withAutoTracking(autoTracking)`](#fn-specforproviderwithautotracking)
    * [`fn withEventHubUri(eventHubUri)`](#fn-specforproviderwitheventhuburi)
    * [`fn withLinks(links)`](#fn-specforproviderwithlinks)
    * [`fn withLinksMixin(links)`](#fn-specforproviderwithlinksmixin)
    * [`fn withLocation(location)`](#fn-specforproviderwithlocation)
    * [`fn withMinimumElevationDegrees(minimumElevationDegrees)`](#fn-specforproviderwithminimumelevationdegrees)
    * [`fn withMinimumVariableContactDuration(minimumVariableContactDuration)`](#fn-specforproviderwithminimumvariablecontactduration)
    * [`fn withNetworkConfigurationSubnetId(networkConfigurationSubnetId)`](#fn-specforproviderwithnetworkconfigurationsubnetid)
    * [`fn withResourceGroupName(resourceGroupName)`](#fn-specforproviderwithresourcegroupname)
    * [`fn withTags(tags)`](#fn-specforproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specforproviderwithtagsmixin)
    * [`obj spec.forProvider.links`](#obj-specforproviderlinks)
      * [`fn withChannels(channels)`](#fn-specforproviderlinkswithchannels)
      * [`fn withChannelsMixin(channels)`](#fn-specforproviderlinkswithchannelsmixin)
      * [`fn withDirection(direction)`](#fn-specforproviderlinkswithdirection)
      * [`fn withName(name)`](#fn-specforproviderlinkswithname)
      * [`fn withPolarization(polarization)`](#fn-specforproviderlinkswithpolarization)
      * [`obj spec.forProvider.links.channels`](#obj-specforproviderlinkschannels)
        * [`fn withBandwidthMhz(bandwidthMhz)`](#fn-specforproviderlinkschannelswithbandwidthmhz)
        * [`fn withCenterFrequencyMhz(centerFrequencyMhz)`](#fn-specforproviderlinkschannelswithcenterfrequencymhz)
        * [`fn withDemodulationConfiguration(demodulationConfiguration)`](#fn-specforproviderlinkschannelswithdemodulationconfiguration)
        * [`fn withEndPoint(endPoint)`](#fn-specforproviderlinkschannelswithendpoint)
        * [`fn withEndPointMixin(endPoint)`](#fn-specforproviderlinkschannelswithendpointmixin)
        * [`fn withModulationConfiguration(modulationConfiguration)`](#fn-specforproviderlinkschannelswithmodulationconfiguration)
        * [`fn withName(name)`](#fn-specforproviderlinkschannelswithname)
        * [`obj spec.forProvider.links.channels.endPoint`](#obj-specforproviderlinkschannelsendpoint)
          * [`fn withEndPointName(endPointName)`](#fn-specforproviderlinkschannelsendpointwithendpointname)
          * [`fn withIpAddress(ipAddress)`](#fn-specforproviderlinkschannelsendpointwithipaddress)
          * [`fn withPort(port)`](#fn-specforproviderlinkschannelsendpointwithport)
          * [`fn withProtocol(protocol)`](#fn-specforproviderlinkschannelsendpointwithprotocol)
    * [`obj spec.forProvider.networkConfigurationSubnetIdRef`](#obj-specforprovidernetworkconfigurationsubnetidref)
      * [`fn withName(name)`](#fn-specforprovidernetworkconfigurationsubnetidrefwithname)
      * [`obj spec.forProvider.networkConfigurationSubnetIdRef.policy`](#obj-specforprovidernetworkconfigurationsubnetidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforprovidernetworkconfigurationsubnetidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforprovidernetworkconfigurationsubnetidrefpolicywithresolve)
    * [`obj spec.forProvider.networkConfigurationSubnetIdSelector`](#obj-specforprovidernetworkconfigurationsubnetidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforprovidernetworkconfigurationsubnetidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforprovidernetworkconfigurationsubnetidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforprovidernetworkconfigurationsubnetidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.networkConfigurationSubnetIdSelector.policy`](#obj-specforprovidernetworkconfigurationsubnetidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforprovidernetworkconfigurationsubnetidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforprovidernetworkconfigurationsubnetidselectorpolicywithresolve)
    * [`obj spec.forProvider.resourceGroupNameRef`](#obj-specforproviderresourcegroupnameref)
      * [`fn withName(name)`](#fn-specforproviderresourcegroupnamerefwithname)
      * [`obj spec.forProvider.resourceGroupNameRef.policy`](#obj-specforproviderresourcegroupnamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnamerefpolicywithresolve)
    * [`obj spec.forProvider.resourceGroupNameSelector`](#obj-specforproviderresourcegroupnameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderresourcegroupnameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.resourceGroupNameSelector.policy`](#obj-specforproviderresourcegroupnameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withAutoTracking(autoTracking)`](#fn-specinitproviderwithautotracking)
    * [`fn withEventHubUri(eventHubUri)`](#fn-specinitproviderwitheventhuburi)
    * [`fn withLinks(links)`](#fn-specinitproviderwithlinks)
    * [`fn withLinksMixin(links)`](#fn-specinitproviderwithlinksmixin)
    * [`fn withLocation(location)`](#fn-specinitproviderwithlocation)
    * [`fn withMinimumElevationDegrees(minimumElevationDegrees)`](#fn-specinitproviderwithminimumelevationdegrees)
    * [`fn withMinimumVariableContactDuration(minimumVariableContactDuration)`](#fn-specinitproviderwithminimumvariablecontactduration)
    * [`fn withNetworkConfigurationSubnetId(networkConfigurationSubnetId)`](#fn-specinitproviderwithnetworkconfigurationsubnetid)
    * [`fn withTags(tags)`](#fn-specinitproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specinitproviderwithtagsmixin)
    * [`obj spec.initProvider.links`](#obj-specinitproviderlinks)
      * [`fn withChannels(channels)`](#fn-specinitproviderlinkswithchannels)
      * [`fn withChannelsMixin(channels)`](#fn-specinitproviderlinkswithchannelsmixin)
      * [`fn withDirection(direction)`](#fn-specinitproviderlinkswithdirection)
      * [`fn withName(name)`](#fn-specinitproviderlinkswithname)
      * [`fn withPolarization(polarization)`](#fn-specinitproviderlinkswithpolarization)
      * [`obj spec.initProvider.links.channels`](#obj-specinitproviderlinkschannels)
        * [`fn withBandwidthMhz(bandwidthMhz)`](#fn-specinitproviderlinkschannelswithbandwidthmhz)
        * [`fn withCenterFrequencyMhz(centerFrequencyMhz)`](#fn-specinitproviderlinkschannelswithcenterfrequencymhz)
        * [`fn withDemodulationConfiguration(demodulationConfiguration)`](#fn-specinitproviderlinkschannelswithdemodulationconfiguration)
        * [`fn withEndPoint(endPoint)`](#fn-specinitproviderlinkschannelswithendpoint)
        * [`fn withEndPointMixin(endPoint)`](#fn-specinitproviderlinkschannelswithendpointmixin)
        * [`fn withModulationConfiguration(modulationConfiguration)`](#fn-specinitproviderlinkschannelswithmodulationconfiguration)
        * [`fn withName(name)`](#fn-specinitproviderlinkschannelswithname)
        * [`obj spec.initProvider.links.channels.endPoint`](#obj-specinitproviderlinkschannelsendpoint)
          * [`fn withEndPointName(endPointName)`](#fn-specinitproviderlinkschannelsendpointwithendpointname)
          * [`fn withIpAddress(ipAddress)`](#fn-specinitproviderlinkschannelsendpointwithipaddress)
          * [`fn withPort(port)`](#fn-specinitproviderlinkschannelsendpointwithport)
          * [`fn withProtocol(protocol)`](#fn-specinitproviderlinkschannelsendpointwithprotocol)
    * [`obj spec.initProvider.networkConfigurationSubnetIdRef`](#obj-specinitprovidernetworkconfigurationsubnetidref)
      * [`fn withName(name)`](#fn-specinitprovidernetworkconfigurationsubnetidrefwithname)
      * [`obj spec.initProvider.networkConfigurationSubnetIdRef.policy`](#obj-specinitprovidernetworkconfigurationsubnetidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitprovidernetworkconfigurationsubnetidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitprovidernetworkconfigurationsubnetidrefpolicywithresolve)
    * [`obj spec.initProvider.networkConfigurationSubnetIdSelector`](#obj-specinitprovidernetworkconfigurationsubnetidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitprovidernetworkconfigurationsubnetidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitprovidernetworkconfigurationsubnetidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitprovidernetworkconfigurationsubnetidselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.networkConfigurationSubnetIdSelector.policy`](#obj-specinitprovidernetworkconfigurationsubnetidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitprovidernetworkconfigurationsubnetidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitprovidernetworkconfigurationsubnetidselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of ContactProfile

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"ContactProfileSpec defines the desired state of ContactProfile"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withAutoTracking

```ts
withAutoTracking(autoTracking)
```

"Auto-tracking configurations for a spacecraft. Possible values are disabled, xBand and sBand."

### fn spec.forProvider.withEventHubUri

```ts
withEventHubUri(eventHubUri)
```

"ARM resource identifier of the Event Hub used for telemetry. Requires granting Orbital Resource Provider the rights to send telemetry into the hub."

### fn spec.forProvider.withLinks

```ts
withLinks(links)
```

"A list of spacecraft links. A links block as defined below. Changing this forces a new resource to be created."

### fn spec.forProvider.withLinksMixin

```ts
withLinksMixin(links)
```

"A list of spacecraft links. A links block as defined below. Changing this forces a new resource to be created."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withLocation

```ts
withLocation(location)
```

"The location where the contact profile exists. Changing this forces a new resource to be created."

### fn spec.forProvider.withMinimumElevationDegrees

```ts
withMinimumElevationDegrees(minimumElevationDegrees)
```

"Maximum elevation of the antenna during the contact in decimal degrees."

### fn spec.forProvider.withMinimumVariableContactDuration

```ts
withMinimumVariableContactDuration(minimumVariableContactDuration)
```

"Minimum viable contact duration in ISO 8601 format. Used for listing the available contacts with a spacecraft at a given ground station."

### fn spec.forProvider.withNetworkConfigurationSubnetId

```ts
withNetworkConfigurationSubnetId(networkConfigurationSubnetId)
```

"ARM resource identifier of the subnet delegated to the Microsoft.Orbital/orbitalGateways. Needs to be at least a class C subnet, and should not have any IP created in it. Changing this forces a new resource to be created."

### fn spec.forProvider.withResourceGroupName

```ts
withResourceGroupName(resourceGroupName)
```

"The name of the Resource Group where the contact profile exists. Changing this forces a new resource to be created."

### fn spec.forProvider.withTags

```ts
withTags(tags)
```

"A mapping of tags to assign to the resource."

### fn spec.forProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"A mapping of tags to assign to the resource."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.links

"A list of spacecraft links. A links block as defined below. Changing this forces a new resource to be created."

### fn spec.forProvider.links.withChannels

```ts
withChannels(channels)
```

"A list of contact profile link channels. A channels block as defined below."

### fn spec.forProvider.links.withChannelsMixin

```ts
withChannelsMixin(channels)
```

"A list of contact profile link channels. A channels block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.links.withDirection

```ts
withDirection(direction)
```

"Direction of the link. Possible values are Uplink and Downlink."

### fn spec.forProvider.links.withName

```ts
withName(name)
```

"Name of the link."

### fn spec.forProvider.links.withPolarization

```ts
withPolarization(polarization)
```

"Polarization of the link. Possible values are LHCP, RHCP, linearVertical and linearHorizontal."

## obj spec.forProvider.links.channels

"A list of contact profile link channels. A channels block as defined below."

### fn spec.forProvider.links.channels.withBandwidthMhz

```ts
withBandwidthMhz(bandwidthMhz)
```

"Bandwidth in MHz."

### fn spec.forProvider.links.channels.withCenterFrequencyMhz

```ts
withCenterFrequencyMhz(centerFrequencyMhz)
```

"Center frequency in MHz."

### fn spec.forProvider.links.channels.withDemodulationConfiguration

```ts
withDemodulationConfiguration(demodulationConfiguration)
```

"Copy of the modem configuration file such as Kratos QRadio or Kratos QuantumRx. Only valid for downlink directions. If provided, the modem connects to the customer endpoint and sends demodulated data instead of a VITA.49 stream."

### fn spec.forProvider.links.channels.withEndPoint

```ts
withEndPoint(endPoint)
```

"Customer End point to store/retrieve data during a contact. An end_point block as defined below."

### fn spec.forProvider.links.channels.withEndPointMixin

```ts
withEndPointMixin(endPoint)
```

"Customer End point to store/retrieve data during a contact. An end_point block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.links.channels.withModulationConfiguration

```ts
withModulationConfiguration(modulationConfiguration)
```

"Copy of the modem configuration file such as Kratos QRadio. Only valid for uplink directions. If provided, the modem connects to the customer endpoint and accepts commands from the customer instead of a VITA.49 stream."

### fn spec.forProvider.links.channels.withName

```ts
withName(name)
```

"The name of the contact profile. Changing this forces a new resource to be created."

## obj spec.forProvider.links.channels.endPoint

"Customer End point to store/retrieve data during a contact. An end_point block as defined below."

### fn spec.forProvider.links.channels.endPoint.withEndPointName

```ts
withEndPointName(endPointName)
```

"Name of an end point."

### fn spec.forProvider.links.channels.endPoint.withIpAddress

```ts
withIpAddress(ipAddress)
```

"IP address of an end point."

### fn spec.forProvider.links.channels.endPoint.withPort

```ts
withPort(port)
```

"TCP port to listen on to receive data."

### fn spec.forProvider.links.channels.endPoint.withProtocol

```ts
withProtocol(protocol)
```

"Protocol of an end point. Possible values are TCP and UDP."

## obj spec.forProvider.networkConfigurationSubnetIdRef

"Reference to a Subnet in network to populate networkConfigurationSubnetId."

### fn spec.forProvider.networkConfigurationSubnetIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.networkConfigurationSubnetIdRef.policy

"Policies for referencing."

### fn spec.forProvider.networkConfigurationSubnetIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.networkConfigurationSubnetIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.networkConfigurationSubnetIdSelector

"Selector for a Subnet in network to populate networkConfigurationSubnetId."

### fn spec.forProvider.networkConfigurationSubnetIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.networkConfigurationSubnetIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.networkConfigurationSubnetIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.networkConfigurationSubnetIdSelector.policy

"Policies for selection."

### fn spec.forProvider.networkConfigurationSubnetIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.networkConfigurationSubnetIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.resourceGroupNameRef

"Reference to a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.resourceGroupNameRef.policy

"Policies for referencing."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.resourceGroupNameSelector

"Selector for a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.resourceGroupNameSelector.policy

"Policies for selection."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withAutoTracking

```ts
withAutoTracking(autoTracking)
```

"Auto-tracking configurations for a spacecraft. Possible values are disabled, xBand and sBand."

### fn spec.initProvider.withEventHubUri

```ts
withEventHubUri(eventHubUri)
```

"ARM resource identifier of the Event Hub used for telemetry. Requires granting Orbital Resource Provider the rights to send telemetry into the hub."

### fn spec.initProvider.withLinks

```ts
withLinks(links)
```

"A list of spacecraft links. A links block as defined below. Changing this forces a new resource to be created."

### fn spec.initProvider.withLinksMixin

```ts
withLinksMixin(links)
```

"A list of spacecraft links. A links block as defined below. Changing this forces a new resource to be created."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withLocation

```ts
withLocation(location)
```

"The location where the contact profile exists. Changing this forces a new resource to be created."

### fn spec.initProvider.withMinimumElevationDegrees

```ts
withMinimumElevationDegrees(minimumElevationDegrees)
```

"Maximum elevation of the antenna during the contact in decimal degrees."

### fn spec.initProvider.withMinimumVariableContactDuration

```ts
withMinimumVariableContactDuration(minimumVariableContactDuration)
```

"Minimum viable contact duration in ISO 8601 format. Used for listing the available contacts with a spacecraft at a given ground station."

### fn spec.initProvider.withNetworkConfigurationSubnetId

```ts
withNetworkConfigurationSubnetId(networkConfigurationSubnetId)
```

"ARM resource identifier of the subnet delegated to the Microsoft.Orbital/orbitalGateways. Needs to be at least a class C subnet, and should not have any IP created in it. Changing this forces a new resource to be created."

### fn spec.initProvider.withTags

```ts
withTags(tags)
```

"A mapping of tags to assign to the resource."

### fn spec.initProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"A mapping of tags to assign to the resource."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.links

"A list of spacecraft links. A links block as defined below. Changing this forces a new resource to be created."

### fn spec.initProvider.links.withChannels

```ts
withChannels(channels)
```

"A list of contact profile link channels. A channels block as defined below."

### fn spec.initProvider.links.withChannelsMixin

```ts
withChannelsMixin(channels)
```

"A list of contact profile link channels. A channels block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.links.withDirection

```ts
withDirection(direction)
```

"Direction of the link. Possible values are Uplink and Downlink."

### fn spec.initProvider.links.withName

```ts
withName(name)
```

"Name of the link."

### fn spec.initProvider.links.withPolarization

```ts
withPolarization(polarization)
```

"Polarization of the link. Possible values are LHCP, RHCP, linearVertical and linearHorizontal."

## obj spec.initProvider.links.channels

"A list of contact profile link channels. A channels block as defined below."

### fn spec.initProvider.links.channels.withBandwidthMhz

```ts
withBandwidthMhz(bandwidthMhz)
```

"Bandwidth in MHz."

### fn spec.initProvider.links.channels.withCenterFrequencyMhz

```ts
withCenterFrequencyMhz(centerFrequencyMhz)
```

"Center frequency in MHz."

### fn spec.initProvider.links.channels.withDemodulationConfiguration

```ts
withDemodulationConfiguration(demodulationConfiguration)
```

"Copy of the modem configuration file such as Kratos QRadio or Kratos QuantumRx. Only valid for downlink directions. If provided, the modem connects to the customer endpoint and sends demodulated data instead of a VITA.49 stream."

### fn spec.initProvider.links.channels.withEndPoint

```ts
withEndPoint(endPoint)
```

"Customer End point to store/retrieve data during a contact. An end_point block as defined below."

### fn spec.initProvider.links.channels.withEndPointMixin

```ts
withEndPointMixin(endPoint)
```

"Customer End point to store/retrieve data during a contact. An end_point block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.links.channels.withModulationConfiguration

```ts
withModulationConfiguration(modulationConfiguration)
```

"Copy of the modem configuration file such as Kratos QRadio. Only valid for uplink directions. If provided, the modem connects to the customer endpoint and accepts commands from the customer instead of a VITA.49 stream."

### fn spec.initProvider.links.channels.withName

```ts
withName(name)
```

"The name of the contact profile. Changing this forces a new resource to be created."

## obj spec.initProvider.links.channels.endPoint

"Customer End point to store/retrieve data during a contact. An end_point block as defined below."

### fn spec.initProvider.links.channels.endPoint.withEndPointName

```ts
withEndPointName(endPointName)
```

"Name of an end point."

### fn spec.initProvider.links.channels.endPoint.withIpAddress

```ts
withIpAddress(ipAddress)
```

"IP address of an end point."

### fn spec.initProvider.links.channels.endPoint.withPort

```ts
withPort(port)
```

"TCP port to listen on to receive data."

### fn spec.initProvider.links.channels.endPoint.withProtocol

```ts
withProtocol(protocol)
```

"Protocol of an end point. Possible values are TCP and UDP."

## obj spec.initProvider.networkConfigurationSubnetIdRef

"Reference to a Subnet in network to populate networkConfigurationSubnetId."

### fn spec.initProvider.networkConfigurationSubnetIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.networkConfigurationSubnetIdRef.policy

"Policies for referencing."

### fn spec.initProvider.networkConfigurationSubnetIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.networkConfigurationSubnetIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.networkConfigurationSubnetIdSelector

"Selector for a Subnet in network to populate networkConfigurationSubnetId."

### fn spec.initProvider.networkConfigurationSubnetIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.networkConfigurationSubnetIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.networkConfigurationSubnetIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.networkConfigurationSubnetIdSelector.policy

"Policies for selection."

### fn spec.initProvider.networkConfigurationSubnetIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.networkConfigurationSubnetIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."